# Not-Another-Minecraft-Clone

./: .gitignore  CMakeLists.txt  README.md
src/: Blocks.h  Camera.cpp  Camera.h  Chunk.cpp  Chunk.h  ChunkMesh.cpp  ChunkMesh.h  Game.cpp  Game.h  Layer.h  Player.cpp  Player.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  WorldManager.cpp  WorldManager.h  main.cpp
src/shaders/: shader.frag  shader.vert
